# micromouse-control-module

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  README_8md.html  accel__curve_8h.html  accel__curve_8h__dep__incl.map  accel__curve_8h__dep__incl.md5  accel__curve_8h__incl.map  accel__curve_8h__incl.md5  accel__curve_8h_source.html  accel__designer_8h.html  accel__designer_8h__dep__incl.map  accel__designer_8h__dep__incl.md5  accel__designer_8h__incl.map  accel__designer_8h__incl.md5  accel__designer_8h_source.html  accumulator_8h.html  accumulator_8h__incl.map  accumulator_8h__incl.md5  accumulator_8h_source.html  annotated.html  classAccumulator-members.html  classAccumulator.html  classctrl_1_1AccelCurve-members.html  classctrl_1_1AccelCurve.html  classctrl_1_1AccelCurve_ab6d6c0546e644f73107fc2d128a40051_cgraph.map  classctrl_1_1AccelCurve_ab6d6c0546e644f73107fc2d128a40051_cgraph.md5  classctrl_1_1AccelCurve_ab97fadb44bc1606c4ae5ab495e3a6ec8_cgraph.map  classctrl_1_1AccelCurve_ab97fadb44bc1606c4ae5ab495e3a6ec8_cgraph.md5  classctrl_1_1AccelCurve_adf43c07687d201eff50f2ce72cb00170_cgraph.map  classctrl_1_1AccelCurve_adf43c07687d201eff50f2ce72cb00170_cgraph.md5  classctrl_1_1AccelCurve_ae65a21577962c2e0e1113c0fb0c5505e_cgraph.map  classctrl_1_1AccelCurve_ae65a21577962c2e0e1113c0fb0c5505e_cgraph.md5  classctrl_1_1AccelCurve_afe9b6204f40c2bfcdbc78a622856e52d_cgraph.map  classctrl_1_1AccelCurve_afe9b6204f40c2bfcdbc78a622856e52d_cgraph.md5  classctrl_1_1AccelDesigner-members.html  classctrl_1_1AccelDesigner.html  classctrl_1_1AccelDesigner__coll__graph.map  classctrl_1_1AccelDesigner__coll__graph.md5  (+196 more)
.github/workflows/: github-pages.yml  unit-test.yml
d0/d29/: straight_8h__incl.map  straight_8h__incl.md5
d0/dc3/: slalom_8h__dep__incl.map  slalom_8h__dep__incl.md5
d1/d15/: slalom_2trajectory_8h.html  slalom_2trajectory_8h_source.html
d1/d73/: structctrl_1_1FeedbackController_1_1Breakdown.html
d1/dad/: slalom_8h.html  slalom_8h_source.html
d1/dce/: classctrl_1_1FeedbackController-members.html
d1/deb/: classctrl_1_1Accumulator.html
d2/d25/: classctrl_1_1slalom_1_1Trajectory-members.html
d2/d55/: classctrl_1_1AccelCurve-members.html
d2/d72/: polar_8h__incl.map
d2/dab/: accel__curve_8h__dep__incl.map  accel__curve_8h__dep__incl.md5
d2/db5/: structctrl_1_1FeedbackController_1_1Model-members.html
d3/d05/: polar_8h__dep__incl.map  polar_8h__dep__incl.md5
d3/d0b/: classctrl_1_1Accumulator-members.html
d3/d14/: structctrl_1_1Pose.html
d3/d29/: structctrl_1_1Pose-members.html
d3/d2f/: state_8h__dep__incl.map  state_8h__dep__incl.md5
d3/d3d/: classctrl_1_1AccelDesigner-members.html
d3/d97/: md__home_runner_work_micromouse-control-module_micromouse-control-module_docs_class_design.html
d3/dee/: classctrl_1_1AccelDesigner.html
d4/d1d/: accel__curve_8h__incl.map  accel__curve_8h__incl.md5
d4/d21/: accel__designer_8h.html  accel__designer_8h_source.html
d4/d40/: classctrl_1_1TrajectoryTracker-members.html
d4/d41/: md__home_runner_work_micromouse_control_module_micromouse_control_module_docs_class_design.html
d4/d80/: straight_2trajectory_8h__incl.map  straight_2trajectory_8h__incl.md5
d4/df7/: structctrl_1_1State-members.html
d5/d08/: structctrl_1_1slalom_1_1Shape__coll__graph.map  structctrl_1_1slalom_1_1Shape__coll__graph.md5
d5/d21/: classctrl_1_1straight_1_1Trajectory__coll__graph.map  classctrl_1_1straight_1_1Trajectory__coll__graph.md5
d5/d4d/: md__home_runner_work_micromouse-control-module_micromouse-control-module_docs_computer.html
d5/d93/: polar_8h.html  polar_8h_source.html
d6/d52/: pose_8h__incl.md5
d6/da8/: namespacectrl_1_1slalom.html
d6/dc8/: structctrl_1_1FeedbackController_1_1Gain-members.html
docker/: Dockerfile  README.md  build.sh  run.sh
docs/: CMakeLists.txt  computer.md  design.md  example.md  structure.md
examples/: CMakeLists.txt  CPPLINT.cfg  accel_main.cpp  accel_plot.py  accel_rand_main.cpp  feedback_main.cpp  shape_main.cpp  slalom_main.cpp  slalom_plot.py
examples/accel/: CMakeLists.txt  main.cpp  plot.py
examples/accel_rand/: CMakeLists.txt
examples/continuous/: CMakeLists.txt  main.cpp  plot.py  plot_csv.m
examples/feedback/: CMakeLists.txt  main.cpp
examples/shape/: CMakeLists.txt  main.cpp  plot.py  plot_stack.py
examples/slalom/: CMakeLists.txt  main.cpp  plot.py  plot_csv.m
examples/trajectory/: CMakeLists.txt  main.cpp  plot_csv.m
inc/: AccelCurve.h  AccelDesigner.h  Position.h  SlalomDesigner.h  TrajectoryTracker.h  accel_curve.h  accel_designer.h  feedback_controller.h  polar.h  position.h  slalom.h  state.h  straight.h  trajectory_tracker.h
include/: accel_curve.h  accel_designer.h  accumulator.h  feedback_controller.h  polar.h  pose.h  slalom.h  state.h  straight.h  trajectory_tracker.h
latex/: .gitignore  .latexmkrc  main.tex
matlab/: plot_main.m  plot_out.m  plot_slalom.m  plot_trajectory.m  plot_tt_slalom.m  plot_tt_straight.m
platformio/: app_ctrl_accel.cpp  app_ctrl_slalom.cpp  app_main.cpp
pybind11/: CMakeLists.txt  CPPLINT.cfg  README.md  ctrl.cpp  plot.py  test.py
python/: CMakeLists.txt  README.md  ctrl.cpp  plot.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  files_0.js  files_1.js  (+54 more)
test/: CMakeLists.txt  googletest-download.cmake  main.cpp  test_accel_curve.cpp  test_accel_designer.cpp
test_accel/: CMakeLists.txt  main.cpp  plot.py
test_csv/: CMakeLists.txt  main.cpp
test_gtest/: CMakeLists.txt  googletest_download.cmake  test_accel_curve.cpp
test_main/: CMakeLists.txt  main.cpp  plot.py
test_shape/: CMakeLists.txt  main.cpp  plot.py  plot_stack.py
test_slalom/: CMakeLists.txt  main.cpp  plot.py
test_traj/: CMakeLists.txt  main.cpp
(+80 files in other folders)
